# splitcopy

./: .gitignore  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py  splitcopy.py
.github/workflows/: python-package.yml
splitcopy/: ftp.py  get.py  paramikoshell.py  progress.py  put.py  shared.py  splitcopy.py  ssh2scp.py  ssh2shell.py
src/splitcopy/: ftp.py  get.py  paramikoshell.py  progress.py  put.py  shared.py  splitcopy.py
src/splitcopy/tests/: __init__.py  test_ftp.py  test_get.py  test_paramikoshell.py  test_progress.py  test_put.py  test_shared.py  test_splitcopy.py
