[metadata]
name = splitcopy
version = 1.4.0
author = Chris Jenn
author_email = jnpr-community-netdev@juniper.net
license = Apache 2.0
description = Improves file transfer rates when copying files to/from JUNOS/EVO/*nix hosts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    ftp
    ssh
    scp
    transfer
url = https://github.com/Juniper/splitcopy
project_urls =
    Bug Tracker = https://github.com/Juniper/splitcopy/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Networking

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires =
    paramiko
    scp
    windows-curses; sys_platform == "win32"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    splitcopy = splitcopy.splitcopy:main
